--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
 title: Gravity
-motto: wait to write
+motto: 囿于warning,error与bug
 email: wangyilinchn@foxmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  npm run dev
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://MechanicianW.github.io" # the base hostname & protocol for your site
-github_username:  Mechanician
+github_username:  MechanicianW
 
 # Build settings
 markdown: kramdown
