--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Mec # ex. I m Chuan
+title: Gravity # ex. I m Chuan
 name: Mec # ex. DONGChuan
 email: wangyilinchn@foxmail.com
 location: Beijing # ex. Nice, France
