--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ archive_generator:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/MechanicianW/MechanicianW.github.io
+  repo: github.com/MechanicianW/MechanicianW.github.io
 
 # Offline
 ## Config passed to sw-precache
