--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ after_script:
   - git config user.email "wangyilinchn@foxmail.com"
   - git add .
   - git commit -m "update"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master  #GH_TOKEN是在Travis中配置token的名称
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - hexo deploy
 
 branches:
   only:
