--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ install:
 
 script:
   - hexo cl  #清除
-  - hexo g  #生成
-  - hexo g  #生成
+  - hexo g -d #生成
 
 after_script:
   - cd ./public
@@ -21,7 +20,6 @@ after_script:
   - git add .
   - git commit -m "update"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
-  - hexo deploy
 
 branches:
   only:
