--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 title: Minibase
 subtitle:
 description:
-author: Mechanician
+author: Colafornia
 language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://mechanicianw.github.io
+url: https://blog.colafornia.me/
 root: /
-permalink: :year/:month/:day/:title/
+permalink: post/:year/:title/
 permalink_defaults:
 
 # Directory
@@ -25,7 +25,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: [README.md]
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -77,7 +77,7 @@ archive_generator:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:MechanicianW/MechanicianW.github.io.git
+  repository: git@github.com:Colafornia/Colafornia.github.io.git
   branch: master
 
 # Offline
@@ -95,3 +95,8 @@ offline:
       handler: cacheFirst
       options:
         origin: cdnjs.cloudflare.com
+
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
